--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ actions.MORNING=M,M*
 actions.AFTERNOON=P,P*
 actions.ABSENCE=F,Rec,Agg,mal,PJ,/,L104
 actions.IDLE=\u0020
+
+cors.allowedOrigins=http://localhost:8080
